Frontend Work NO.3 - Push

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "luminexclient",
+  "name": "luminexclient-frontend",
   "private": true,
   "sideEffects": false,
   "type": "module",
